# LLM-Age-Steering-Analysis

./: .gitignore  README.md  config.py  introToTransformerLens.py  main.ipynb  pyproject.toml  requirements.txt  setup.py
experimentGraphMakers/scripts/graphMaker/exp1/: probeAccuracy.py
experimentGraphMakers/scripts/graphMaker/exp2/: personaSwitchProbabilities.py  turnsToRealize.py
experimentGraphMakers/scripts/graphMaker/exp3/: checker_accuracy.py  direct_accuracy.py  steered_checker_accuracy.py  steered_direct_accuracy.py
src/analysis/: modelMetaKnowledgeChecker.py  modelMetaKnowledgeDirect.py  steeredModelMetaKnowledgeChecker.py  steeredModelMetaKnowledgeDirect.py
src/data_processing/: createPersonaSwitchDataset.py
src/interventions/: causalIntervention.py
src/probes/: ageLinearProbeDating.py  predictAgeUsingProbes.py
src/utils/: activationsPCA.py  cosineSimilarity.py  measureObstinanceProbabilities.py  measureObstinancy.py  wordsForEachAge.py
